<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/bg"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_below="@+id/toolbar"
    tools:context="Fragment.DietPlanWeightGainWomen">
    <ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diet Chart For Weight Gain"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FF0000"
        android:textSize="26sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Early Morning"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/_5_almonds_soaked_in_water_overnight_with_the_peel"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Breakfast"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/banana_milkshake_1_glass_vegitable_daliya_vegitable_oats_1_bowl_multigrain_bread_2_slices_panner_30gm"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Mid-Morning"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Lassi/Coconut water/Butter milk(1 glass)"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Lunch"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/chapati_2_3_rice_2_katori_vegitables_1_katori_curd_1_katori"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="Evening"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/banana_shake_1_glass_upma_roasted_channa_1_katori"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/pre_dinner"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/vegitable_soup_chicken_soup_1_soup_bowl"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/dinner"
        android:textColor="#000000"
        android:layout_gravity="start"
        android:fontFamily="@font/bungee"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/chapati_2_3_vegitables_1_katori_dal_1_katori"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_diet_plan_is_not_same_for_all_if_you_want_to_customise_the_diet_plan_according_to_your_weight_and_age_feel_free_to_contact_us"
            android:textSize="18sp"
            android:textColor="#F9A825"
            android:textStyle="normal"
            android:padding="2dp"
            android:layout_marginStart="10dp"
            android:gravity="start"/>
    </LinearLayout>
</ScrollView>
</FrameLayout>